fix loading spinner in dark mode

--- a/src/components/rules-index/RulesIndex.css
+++ b/src/components/rules-index/RulesIndex.css
@@ -19,3 +19,7 @@
   filter: invert(1) hue-rotate(175deg);
   background: #eee;
 }
+
+.dark .rules-index__spinner {
+  color: var(--color-font);
+}
